--- a/chat-service/pom.xml
+++ b/chat-service/pom.xml
@@ -45,6 +45,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>chat-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
