--- a/listing-service/pom.xml
+++ b/listing-service/pom.xml
@@ -48,6 +48,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>listing-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
