--- a/orchestrator-service/pom.xml
+++ b/orchestrator-service/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -41,6 +42,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>orchestrator-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
