--- a/listing-service/src/main/resources/application.yaml
+++ b/listing-service/src/main/resources/application.yaml
@@ -6,6 +6,8 @@ couchbase:
 server:
   port: 8082
 spring:
+  application:
+    name: listing-service
   main:
     allow-bean-definition-overriding: true
   rabbitmq:
@@ -15,3 +17,9 @@ spring:
     password: guest
     updateQueue: update
     username: guest
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8763/eureka}
+  instance:
+    preferIpAddress: true
