--- a/orchestrator-service/src/main/resources/application.yaml
+++ b/orchestrator-service/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+ application:
+  name: orchestrator-service
  rabbitmq:
   host: 192.168.144.128
   username: guest
@@ -6,6 +8,15 @@ spring:
   directExchange: listing
   updateQueue: update
   deleteQueue: delete
-
+ main:
+  allow-bean-definition-overriding: true
+eureka:
+ client:
+  serviceUrl:
+   defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+ instance:
+  preferIpAddress: true
+server:
+ port: 8080
 
 
