--- a/customer-service/src/main/resources/application.yaml
+++ b/customer-service/src/main/resources/application.yaml
@@ -1,8 +1,10 @@
 server:
-  port: 8081
+  port: 9002
 spring:
   application:
     name: customer-service
+  profiles:
+    active: zone2
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     password: password
@@ -14,8 +16,10 @@ spring:
     show-sql: true
 eureka:
   client:
+    preferSameZoneEureka: true
+    region: region1
     serviceUrl:
-      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
-  instance:
-    hostname: customer-service
-    preferIpAddress: false
+      - zone1: http://localhost:8761/eureka/
+      - zone2: http://localhost:8762/eureka/
+    availabilityZones:
+      region1: zone1,zone2
