--- a/eureka-server/src/main/resources/application.yaml
+++ b/eureka-server/src/main/resources/application.yaml
@@ -1,9 +1,16 @@
-spring:
-  profiles:
-    active: peer1
 server:
-  port: 8761
+  port: 8762
 eureka:
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    registerWithEureka: true
+    fetchRegistry: true
+    region: region1
+    serviceUrl:
+      - zone1: http://localhost:8761/eureka/
+      - zone2: http://localhost:8762/eureka/
+    availabilityZones:
+      region1: zone1,zone2
+
+spring:
+  profiles:
+    active: zone2
