--- a/listing-service/src/main/resources/application.yaml
+++ b/listing-service/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ couchbase:
   password: password
   username: Administrator
 server:
-  port: 8082
+  port: 8003
 spring:
   application:
     name: listing-service
@@ -19,7 +19,10 @@ spring:
     username: guest
 eureka:
   client:
-    serviceUrl:
-      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
-  instance:
-    preferIpAddress: true
+    prefer-same-zone-eureka: true
+      region: region1
+      service-url:
+        zone1: http://localhost:8761/eureka/
+        zone2: http://localhost:8762/eureka/
+      availability-zones:
+        region1: zone1,zone2
