--- a/orchestrator-service/src/main/resources/application.yaml
+++ b/orchestrator-service/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+ profiles:
+  active: zone2
  application:
   name: orchestrator-service
  rabbitmq:
@@ -12,11 +14,14 @@ spring:
   allow-bean-definition-overriding: true
 eureka:
  client:
+  preferSameZoneEureka: true
+  region: region1
   serviceUrl:
-   defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
- instance:
-  preferIpAddress: true
+    - zone1: http://localhost:8761/eureka/
+    - zone2: http://localhost:8762/eureka/
+  availabilityZones:
+    region1: zone1,zone2
 server:
- port: 8080
+ port: 9001
 
 
